--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
     "id" : "H59A54C9F", /*应用的标识，创建应用时自动生成，勿手动修改*/
     "name" : "中富移动办公", /*应用名称，程序桌面图标名称*/
     "version" : {
-        "name" : "1.0.7", /*应用版本名称*/
+        "name" : "1.0.8", /*应用版本名称*/
         "code" : "83"
     },
     "description" : "", /*应用描述信息*/
@@ -265,5 +265,5 @@
         }
     },
     "unpackage" : [ "README.md" ],
-    "fullscreen" : true
+    "fullscreen" : false
 }
