--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
     "id" : "H59A54C9F", /*应用的标识，创建应用时自动生成，勿手动修改*/
     "name" : "中富移动办公", /*应用名称，程序桌面图标名称*/
     "version" : {
-        "name" : "1.0.17", /*应用版本名称*/
+        "name" : "1.0.18", /*应用版本名称*/
         "code" : "83"
     },
     "description" : "", /*应用描述信息*/
@@ -31,7 +31,10 @@
         "Share" : {},
         "VideoPlayer" : {},
         "Speech" : {},
-        "OAuth" : {},"Webview":{},"NativeUI":{},"Navigator":{}
+        "OAuth" : {},
+        "Webview" : {},
+        "NativeUI" : {},
+        "Navigator" : {}
     },
     "plus" : {
         "splashscreen" : {
@@ -174,220 +177,176 @@
         }
     },
     "dependencies" : {
-		"pages": {
-			"setting.html": {
-				"href": "setting.html",
-				"resources": [
-					"js/mui.min.js",
-					"js/mui.view.js",
-					"libs/easymob-webim-sdk/jquery-1.11.1.js",
-					"libs/easymob-webim-sdk/strophe-custom-2.0.0.js",
-					"libs/easymob-webim-sdk/json2.js",
-					"libs/easymob-webim-sdk/easemob.im-1.0.5.js",
-					"js/feedback.js",
-					"js/feedback-page.js",
-					"js/mui.locker.js",
-					"js/app.js",
-					"css/mui.min.css",
-					"fonts/mui.ttf",
-					"css/feedback-page.css",
-					"images/iconfont-tianjia.png"
-				],
-				"refer": [
-					"login.html"
-				],
-				"priority": 1
-			},
-			"main.html": {
-				"href": "main.html",
-				"resources": [
-					"css/mui.min.css",
-					"fonts/mui.ttf",
-					"js/mui.min.js",
-					"js/app.js"
-				],
-				"refer": [
-					"setting.html",
-					"biaodanluru.html"
-				],
-				"priority": 1
-			},
-			"unlock.html": {
-				"href": "unlock.html",
-				"resources": [
-					"css/mui.min.css",
-					"fonts/mui.ttf",
-					"js/mui.min.js",
-					"js/mui.locker.js",
-					"js/app.js"
-				],
-				"refer": [
-					"login.html",
-					"main.html"
-				],
-				"priority": 0
-			},
-			"forget_password.html": {
-				"href": "forget_password.html",
-				"resources": [
-					"css/mui.min.css",
-					"fonts/mui.ttf",
-					"css/style.css",
-					"js/mui.min.js",
-					"js/app.js"
-				],
-				"priority": 1
-			},
-			"reg.html": {
-				"href": "reg.html",
-				"resources": [
-					"css/mui.min.css",
-					"fonts/mui.ttf",
-					"css/style.css",
-					"js/mui.min.js",
-					"js/app.js"
-				],
-				"refer": [
-					"login.html"
-				],
-				"priority": 3
-			},
-			"login.html": {
-				"href": "login.html",
-				"resources": [
-					"css/mui.min.css",
-					"fonts/mui.ttf",
-					"css/style.css",
-					"js/mui.min.js",
-					"js/mui.enterfocus.js",
-					"js/app.js",
-					"images/qihoo.png",
-					"images/qq.png",
-					"images/sinaweibo.png",
-					"images/weixin.png"
-				],
-				"refer": [
-					"unlock.html",
-					"forget_password.html",
-					"main.html",
-					"reg.html"
-				],
-				"priority": 0
-			},
-			"biaodanluru.html": {
-				"resources": [],
-				"refer": [
-					"zifu/ZiFuKaiYou.html",
-					"neiceng/AOIshengchan.html",
-					"main.html",
-					"kailiao/shoujian.html",
-					"pinzhi/kongtongceliang.html",
-					"lvyou/FanGong.html",
-					"yahe/ronghe.html",
-					"yahe/ppChouYou.html",
-					"diance/feizhen.html",
-					"ganmo/GanMoChuShu.html",
-					"pinzhi/dutongqiepian.html",
-					"yaoshuitianjia/tongganglulizi.html",
-					"ganmo/CCDbaoguang.html",
-					"ganmo/quanzidongbaoguang.html"
-				],
-				"priority": 0
-			},
-			"zifu/ZiFuKaiYou.html": {
-				"resources": [],
-				"refer": [
-					"scan.html"
-				],
-				"priority": 0
-			},
-			"neiceng/AOIshengchan.html": {
-				"resources": [],
-				"refer": [
-					"scan.html"
-				],
-				"priority": 0
-			},
-			"kailiao/shoujian.html": {
-				"resources": [],
-				"refer": [
-					"scan.html"
-				],
-				"priority": 0
-			},
-			"pinzhi/kongtongceliang.html": {
-				"resources": [],
-				"refer": [
-					"scan.html"
-				],
-				"priority": 0
-			},
-			"lvyou/FanGong.html": {
-				"resources": [],
-				"refer": [
-					"scan.html"
-				],
-				"priority": 0
-			},
-			"yahe/ronghe.html": {
-				"resources": [],
-				"refer": [
-					"scan.html"
-				],
-				"priority": 0
-			},
-			"yahe/ppChouYou.html": {
-				"resources": [],
-				"refer": [
-					"scan.html"
-				],
-				"priority": 0
-			},
-			"diance/feizhen.html": {
-				"resources": [],
-				"refer": [
-					"scan.html"
-				],
-				"priority": 0
-			},
-			"ganmo/GanMoChuShu.html": {
-				"resources": [],
-				"refer": [
-					"scan.html"
-				],
-				"priority": 0
-			},
-			"pinzhi/dutongqiepian.html": {
-				"resources": [],
-				"refer": [
-					"scan.html"
-				],
-				"priority": 0
-			},
-			"ganmo/CCDbaoguang.html": {
-				"resources": [],
-				"refer": [
-					"scan.html"
-				],
-				"priority": 0
-			},
-			"ganmo/quanzidongbaoguang.html": {
-				"resources": [],
-				"refer": [
-					"scan.html"
-				],
-				"priority": 0
-			}
-		},
-		"idle": {
-			"resources": [
-				"js/service.js",
-				"libs/easymob-webim-sdk/quickstart.md",
-				"images/user-photo.png",
-				"README.md"
-			]
-		}
-	},
+        "pages" : {
+            "setting.html" : {
+                "href" : "setting.html",
+                "resources" : [
+                    "js/mui.min.js",
+                    "js/mui.view.js",
+                    "libs/easymob-webim-sdk/jquery-1.11.1.js",
+                    "libs/easymob-webim-sdk/strophe-custom-2.0.0.js",
+                    "libs/easymob-webim-sdk/json2.js",
+                    "libs/easymob-webim-sdk/easemob.im-1.0.5.js",
+                    "js/feedback.js",
+                    "js/feedback-page.js",
+                    "js/mui.locker.js",
+                    "js/app.js",
+                    "css/mui.min.css",
+                    "fonts/mui.ttf",
+                    "css/feedback-page.css",
+                    "images/iconfont-tianjia.png"
+                ],
+                "refer" : [ "login.html" ],
+                "priority" : 1
+            },
+            "main.html" : {
+                "href" : "main.html",
+                "resources" : [ "css/mui.min.css", "fonts/mui.ttf", "js/mui.min.js", "js/app.js" ],
+                "refer" : [ "setting.html", "biaodanluru.html" ],
+                "priority" : 1
+            },
+            "unlock.html" : {
+                "href" : "unlock.html",
+                "resources" : [
+                    "css/mui.min.css",
+                    "fonts/mui.ttf",
+                    "js/mui.min.js",
+                    "js/mui.locker.js",
+                    "js/app.js"
+                ],
+                "refer" : [ "login.html", "main.html" ],
+                "priority" : 0
+            },
+            "forget_password.html" : {
+                "href" : "forget_password.html",
+                "resources" : [
+                    "css/mui.min.css",
+                    "fonts/mui.ttf",
+                    "css/style.css",
+                    "js/mui.min.js",
+                    "js/app.js"
+                ],
+                "priority" : 1
+            },
+            "reg.html" : {
+                "href" : "reg.html",
+                "resources" : [
+                    "css/mui.min.css",
+                    "fonts/mui.ttf",
+                    "css/style.css",
+                    "js/mui.min.js",
+                    "js/app.js"
+                ],
+                "refer" : [ "login.html" ],
+                "priority" : 3
+            },
+            "login.html" : {
+                "href" : "login.html",
+                "resources" : [
+                    "css/mui.min.css",
+                    "fonts/mui.ttf",
+                    "css/style.css",
+                    "js/mui.min.js",
+                    "js/mui.enterfocus.js",
+                    "js/app.js",
+                    "images/qihoo.png",
+                    "images/qq.png",
+                    "images/sinaweibo.png",
+                    "images/weixin.png"
+                ],
+                "refer" : [ "unlock.html", "forget_password.html", "main.html", "reg.html" ],
+                "priority" : 0
+            },
+            "biaodanluru.html" : {
+                "resources" : [],
+                "refer" : [
+                    "zifu/ZiFuKaiYou.html",
+                    "neiceng/AOIshengchan.html",
+                    "main.html",
+                    "kailiao/shoujian.html",
+                    "pinzhi/kongtongceliang.html",
+                    "lvyou/FanGong.html",
+                    "yahe/ronghe.html",
+                    "yahe/ppChouYou.html",
+                    "diance/feizhen.html",
+                    "ganmo/GanMoChuShu.html",
+                    "pinzhi/dutongqiepian.html",
+                    "yaoshuitianjia/tongganglulizi.html",
+                    "ganmo/CCDbaoguang.html",
+                    "ganmo/quanzidongbaoguang.html"
+                ],
+                "priority" : 0
+            },
+            "zifu/ZiFuKaiYou.html" : {
+                "resources" : [],
+                "refer" : [ "scan.html" ],
+                "priority" : 0
+            },
+            "neiceng/AOIshengchan.html" : {
+                "resources" : [],
+                "refer" : [ "scan.html" ],
+                "priority" : 0
+            },
+            "kailiao/shoujian.html" : {
+                "resources" : [],
+                "refer" : [ "scan.html" ],
+                "priority" : 0
+            },
+            "pinzhi/kongtongceliang.html" : {
+                "resources" : [],
+                "refer" : [ "scan.html" ],
+                "priority" : 0
+            },
+            "lvyou/FanGong.html" : {
+                "resources" : [],
+                "refer" : [ "scan.html" ],
+                "priority" : 0
+            },
+            "yahe/ronghe.html" : {
+                "resources" : [],
+                "refer" : [ "scan.html" ],
+                "priority" : 0
+            },
+            "yahe/ppChouYou.html" : {
+                "resources" : [],
+                "refer" : [ "scan.html" ],
+                "priority" : 0
+            },
+            "diance/feizhen.html" : {
+                "resources" : [],
+                "refer" : [ "scan.html" ],
+                "priority" : 0
+            },
+            "ganmo/GanMoChuShu.html" : {
+                "resources" : [],
+                "refer" : [ "scan.html" ],
+                "priority" : 0
+            },
+            "pinzhi/dutongqiepian.html" : {
+                "resources" : [],
+                "refer" : [ "scan.html" ],
+                "priority" : 0
+            },
+            "ganmo/CCDbaoguang.html" : {
+                "resources" : [],
+                "refer" : [ "scan.html" ],
+                "priority" : 0
+            },
+            "ganmo/quanzidongbaoguang.html" : {
+                "resources" : [],
+                "refer" : [ "scan.html" ],
+                "priority" : 0
+            }
+        },
+        "idle" : {
+            "resources" : [
+                "js/service.js",
+                "libs/easymob-webim-sdk/quickstart.md",
+                "images/user-photo.png",
+                "README.md"
+            ]
+        }
+    },
     "unpackage" : [ "README.md" ],
     "fullscreen" : false
 }
