--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
     "id" : "H59A54C9F", /*应用的标识，创建应用时自动生成，勿手动修改*/
     "name" : "中富移动办公", /*应用名称，程序桌面图标名称*/
     "version" : {
-        "name" : "1.0.17", /*应用版本名称*/
+        "name" : "1.0.18", /*应用版本名称*/
         "code" : "83"
     },
     "description" : "", /*应用描述信息*/
@@ -290,7 +290,8 @@
 					"pinzhi/dutongqiepian.html",
 					"yaoshuitianjia/tongganglulizi.html",
 					"ganmo/CCDbaoguang.html",
-					"ganmo/quanzidongbaoguang.html"
+					"ganmo/quanzidongbaoguang.html",
+					"zuankong/ZuanKonRiBao.html"
 				],
 				"priority": 0
 			},
@@ -372,6 +373,13 @@
 				"priority": 0
 			},
 			"ganmo/quanzidongbaoguang.html": {
+				"resources": [],
+				"refer": [
+					"scan.html"
+				],
+				"priority": 0
+			},
+			"zuankong/ZuanKonRiBao.html": {
 				"resources": [],
 				"refer": [
 					"scan.html"
